<resources>
    <string name="app_name">Auction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //progressDialog
    <string name="progressDialog_Loading">تحميل...</string>
    //Reset_Password_Fragment
    <string name="success_message_snackbar">تم بنجاح</string>
    <string name="error_message_snackbar">حاول مرة اخرى</string>
    <string name="reset_password_error_message_code">تأكد من كود التحقيق</string>
    <string name="reset_password_error_message_password">تأكد من كلمة المرور</string>
    <string name="reset_password_hint_code">ادخل رقم التحقق</string>
    <string name="reset_password_hint_password">كلمة المرور الجديدة</string>
    <string name="reset_password_hint_repassword">تأكيد كلمة المرور الجديدة</string>
    <string name="reset_password_button_done">تأكيد</string>
    //Forget_Password_Fragment
    <string name="forget_password_error_message_phone">تأكد من رقم الهاتف!</string>
    <string name="forget_password_text">برجاء ادخال رقم هاتفك وسيتم ارسال كود التحقيق اليك في رساله قصيرة .</string>
    <string name="forget_password_hint_phone">رقم الهاتف</string>
    <string name="forget_password_button_done">تأكيد</string>
    //Login_fragment
    <string name="login_fragment_hint_phone">رقم الهاتف</string>
    <string name="login_fragment_hint_password">كلمة المرور</string>
    <string name="login_fragment_checkbox_text">تزكر رقم الهاتف و كلمة المرور .</string>
    <string name="login_fragment_button_login">تسجيل دخول</string>
    <string name="login_fragment_textview_or">أو</string>
    <string name="login_fragment_textview_forget_password">نسيت كلمة المرور ؟</string>
    <string name="login_fragment_textview_register"> ليس لديك حساب؟</string>
    <string name="login_error_message_phone">تأكد من رقم الجوال!</string>
    <string name="login_error_message_password">تأكد من كلمة المرور!</string>
    <string name="login_error_message_not_found">هذا الحساب غير متواجد.</string>
    //register_Fragment
    <string name="register_hint_username">اسم المستخدم</string>
    <string name="register_hint_email">البريد الإلكتروني</string>
    <string name="register_hint_phone">رقم الهاتف</string>
    <string name="register_hint_password">كلمة المرور</string>
    <string name="register_textview_text">بالتسجيل في اوكشن فإنك توافق على</string>
    <string name="register_textview_rules"><u>الشروط والأحكام</u></string>
    <string name="register_button_register">تسجيل</string>
    <string name="register_textview_or">أو</string>
    <string name="register_error_message_username">تأكد من اسم المستخدم!</string>
    <string name="register_error_message_email">تأكد من كلمة البريد الإلكتروني!</string>
    <string name="register_error_message_phone">تأكد من رقم الجوال!</string>
    <string name="register_error_message_password">تأكد من كلمة المرور!</string>
    //home_Activity
    <string name="toolbar_open">open</string>
    <string name="toolbar_close">close</string>
    <string name="nav_home">الرئيسية</string>
    <string name="nav_conversation">محادثات</string>
    <string name="nav_notifications">اشعارات</string>
    <string name="nav_favourite">مفضلة</string>
    <string name="nav_advertisement">اعلانات</string>

</resources>
