<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:layoutDirection="rtl"
    tools:context=".ui.fragment.loginCycle.ForgetPasswordFragment">

    <ImageView
        android:id="@+id/Forget_Password_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_120"
        android:src="@drawable/logoo" />
    <TextView
        android:id="@+id/Forget_Password_TextView_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Forget_Password_logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_32"
        android:fontFamily="@font/cairo"
        android:text="@string/forget_password_text"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size_medium_20" />


    <RelativeLayout
        android:id="@+id/Forget_Password_relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Forget_Password_TextView_Text"
        android:layout_marginLeft="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_marginRight="@dimen/dimen_16">

        <ImageView
            android:id="@+id/Forget_Password_imageView_userIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/dimen_4"
            android:alpha=".6"
            android:background="@drawable/edit_text_rounded_corners"
            android:padding="8dp"
            android:src="@drawable/phone"
            android:tint="@color/white_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Forget_Password_imageView_userIcon"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/Forget_Password_imageView_userIcon"
            android:alpha=".6"
            android:background="@drawable/edit_text_rounded_corners"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Forget_Password_EditText_UserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:fontFamily="@font/details_font"
                android:hint="@string/forget_password_hint_phone"
                android:paddingStart="@dimen/dimen_16"
                android:textColor="@color/white_color"
                android:textColorHint="@color/white_color"
                android:textSize="@dimen/text_size_small_15" />

            <View
                android:layout_width="@dimen/dimen_1"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_4"
                android:layout_marginBottom="@dimen/dimen_4"
                android:background="@color/white_color" />

            <Spinner
                android:id="@+id/Forget_Password_Spinner_Phone_Keys"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:focusableInTouchMode="false"
                android:visibility="visible" />

        </LinearLayout>
    </RelativeLayout>



    <Button
        android:id="@+id/Forget_Password_Button_Done"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_below="@+id/Forget_Password_relativeLayout1"
        android:layout_marginStart="@dimen/dimen_32"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_32"
        android:background="@drawable/button_yellow_2"
        android:fontFamily="@font/cairo"
        android:text="@string/forget_password_button_done"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size_medium_20" />




</RelativeLayout>